k8s/gcp/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: detours
  annotations:
    kubernetes.io/ingress.global-static-ip-name: detours
    networking.gke.io/managed-certificates: app-graphql-dataseams
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - host: app.dataseams.com
    http:
      paths:
      - backend:
          serviceName: ui
          servicePort: 3000
  - host: graphql.dataseams.com
    http:
      paths:
      - backend:
          serviceName: core
          servicePort: 5000
